--- a/client/src/styles/Layout.css
+++ b/client/src/styles/Layout.css
@@ -30,9 +30,18 @@
 .body{
     height: 84vh;
     margin-bottom: 20px;
-    box-shadow: 0 0 2px ;
-    box-shadow: 0 0 2px rgb(193, 111, 111);
-    background-color: white;
+    /* box-shadow: 0 0 2px ;
+    box-shadow: 0 0 2px rgb(193, 111, 111); */
+    /* background-color: white; */
+
+
+    /* .body { */
+        flex: 1;
+        margin-bottom: 20px;
+        box-shadow: 0 0 2px rgb(193, 111, 111);
+        background-color: white;
+        overflow-y: auto; /* Add this line */
+      /* } */
 }
 .logo{
     font-size:1.5rem;
@@ -76,4 +85,47 @@
     color:blue;
     margin: 0 10px;
     text-transform: uppercase;
+}
+.tophead{
+    text-align: center;
+    margin: 0px 10px;
+    /* background-color:white; */
+    border-bottom: 0.5px solid rgb(238, 236, 236);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 5% 0% 0%;
+}
+.profile{
+    /* display: flex; */
+    height: 209px;
+    width: 428px;
+    background-color: rgb(238, 255, 237);
+    box-shadow: 0 0 2px rgb(196, 211, 194);
+}
+.ind{
+    display: flex;
+    /* border: 1px solid black; */
+    margin: 5%;
+    border-bottom: 1px solid rgb(200, 249, 234);
+}
+.indlab{
+    width: 66px;
+    
+    /* font-size: 1rem; */
+    font-weight: 500;
+    border-radius: 2px;
+    margin-left: 5px;
+    margin-right: 5px;
+
+}
+.labelans{
+    width:256px ;
+    /* border-bottom: 1px solid black; */
+
 }
