--- a/client/src/styles/Layout.css
+++ b/client/src/styles/Layout.css
@@ -10,8 +10,9 @@
     min-height: 100%;
     width:300px;
     border-radius: 5px;
-    box-shadow: 0 0 2px rgb(114, 240, 141);
+    box-shadow: 0 0 2px rgb(197, 254, 191);
     background-color: rgb(7, 48, 7);
+    /* //#008080 */
     margin-right: 20px;
     color: white;
 }
